--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"example.aternos.me",
-	"port": "25565",
-	"name": "NRBot",
+	"ip":"TheOddOnes_SMP.aternos.me",
+	"port": "12087",
+	"name": "Pokimanelol",
 	"auto-night-skip":"false"
 }
